syntax = "proto3";

package blog;

import "google/protobuf/timestamp.proto";

service Blog {
    
    // Работа с пользователями
    rpc Register(RegisterRequest) returns (RegisterResponse);

    rpc Login(LoginRequest) returns (LoginResponse);

    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

    // CRUD для блога     
    rpc CreatePost(CreatePostRequest) returns (PostResponse);

    rpc GetPost(GetPostRequest) returns (PostResponse);

    rpc UpdatePost(UpdatePostRequest) returns (PostResponse);

    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);

    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

message RegisterRequest {
    string login = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    Response status = 1;
}

message LoginRequest {
    string email_or_login = 1;
    string password = 2;
}

message LoginResponse {
    Response status = 1;
    optional JWTContainer token = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    Response status = 1;
    optional JWTContainer token = 2;
}

message JWTContainer {
    string access_token = 1;
    string refresh_token = 2;
    google.protobuf.Timestamp expires_in = 3;
}

message CreatePostRequest {
    string title = 1;
    string data = 2;
}

message GetPostRequest {
    string id = 1;
}

message UpdatePostRequest {
    Post post = 1;
}

message PostResponse {
    Response response = 1;
    optional Post post = 2;
}

message DeletePostRequest {
    string post_id = 1;
}

message DeletePostResponse {
    Response status = 1;
}

message ListPostsRequest {
    uint32 page_count = 1;
    uint32 page_size = 2;
}

message ListPostsResponse {
    Response status = 1;
    repeated Post posts = 2;
}

message Response {
    Status code = 1;
    optional string details = 2;
}

enum Status {
    OK = 0;
    UNAUTHORIZED = 1;
    INTERNAL_ERROR = 2;
    INVALID_REQUEST = 3;
}

message Post {
    string id = 1;
    string title = 2;
    string data = 3;
    google.protobuf.Timestamp created_ts = 4;
    google.protobuf.Timestamp last_updated_ts = 5;
}

message User {

}